--- a/style.css
+++ b/style.css
@@ -19,3 +19,30 @@
 margin: 50px 600px;
 display: inline-block;
 }    
+
+.cesb  {
+    background-color:black
+    color:black
+    font-size:24px;
+    padding: 160px 120px:
+
+}
+.alunos-cesb { 
+    padding: 24px 0;
+ 
+}
+body {
+    font-family:sans-serif ;
+    
+}
+.div-alunos {
+    text-align: center;
+    padding: 24px 0;
+    background-color:black
+}
+.imagem-alunos {
+    width: 360px;
+}
+.titulo-alunos {
+    padding:16px 0;
+}                
